<resources>
    <string name="app_name">MyRecipes</string>

    <!--
        activity_login
    -->
    <string name="login_editText_email">Email</string>
    <string name="login_editText_password">Password</string>
    <string name="login_button_login">LOGIN</string>
    <string name="login_textView_or">Or</string>
    <string name="login_button_signup">SIGN UP</string>
    <string name="login_error_empty">Please fill the areas!</string>

    <!--
        bottom_nav_bar
    -->
    <string name="bottom_nav_bar_categories">Categories</string>
    <string name="bottom_nav_bar_random">Random</string>

    <!--
        toolbar_menu
    -->
    <string name="toolbar_menu_logout">Logout</string>

    <!--
        activity_register
    -->
    <string name="register_editText_name">Name</string>
    <string name="register_editText_surname">Surname</string>
    <string name="register_editText_username">Username</string>
    <string name="register_button_save">SAVE</string>
    <string name="register_error_empty">Please fill the areas!</string>

    <!--
        activity_sign_up
    -->
    <string name="signup_editText_email">Email</string>
    <string name="signup_editText_password">Password</string>
    <string name="signup_editText_confirmPassword">Confirm Password</string>
    <string name="signup_textView_error">Passwords are not same!</string>
    <string name="signup_button_signup">SIGN UP</string>
    <string name="signup_error_empty">Please fill the areas!</string>

    <!--
        fragment_add_recipe
    -->
    <string name="fragment_add_recipe_editText_title">Title</string>
    <string name="fragment_add_recipe_editText_description">Description</string>
    <string name="fragment_add_recipe_editText_recipe">Explain your recipe here...</string>
    <string name="fragment_add_recipe_button_cancel">CANCEL</string>
    <string name="fragment_add_recipe_button_save">SAVE</string>

    <!--
        fragment_dialog_add_category
    -->
    <string name="fragment_dialog_add_category_textView_title">Add Category</string>
    <string name="fragment_dialog_add_category_editText_name">Category name</string>
    <string name="fragment_dialog_add_category_error">Category already exists!</string>
    <string name="fragment_dialog_add_category_added">Category added!</string>

    <!--
        AddRecipeActivity Toast
    -->
    <string name="addRecipeActivity_toast_error">Recipe already exists!</string>
    <string name="addRecipeActivity_toast_saved">Recipe saved successfully!</string>
    <string name="addRecipeActivity_toast_imageNotDetected">You have to take photo of you recipe!</string>

    <!--
        refresh_action
    -->
    <string name="refresh_action_menu_refresh">Refresh</string>

    <!--
        random_fragment
    -->
    <string name="random_fragment_title">You can select categories to get a random recipe</string>
    <string name="random_fragment_button">GET A RECIPE</string>

    <!--
        home_fragment searchbar
    -->
    <string name="home_fragment_searchbar_hint">Search</string>
</resources>