<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddRecipeActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fragment_add_recipe_imageViewImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_border"
        android:onClick="addRecipeImage"
        android:src="@drawable/ic_outline_camera_alt_24" />

    <EditText
        android:id="@+id/fragment_add_recipe_editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_add_recipe_editText_title"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:padding="5dp"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/fragment_add_recipe_editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_add_recipe_editText_description"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:padding="5dp"
        android:background="@drawable/edit_text_border"/>

    <EditText
        android:id="@+id/fragment_add_recipe_editTextRecipe"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:inputType="text|textMultiLine"
        android:gravity="top"
        android:hint="@string/fragment_add_recipe_editText_recipe"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:padding="5dp"
        android:background="@drawable/edit_text_border"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <Button
            android:id="@+id/fragment_add_recipe_buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
            android:textColor="@android:color/black"
            android:text="@string/fragment_add_recipe_button_cancel"
            android:onClick="recipeCancel"/>

        <Button
            android:id="@+id/fragment_add_recipe_buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/fragment_add_recipe_button_save"
            android:onClick="recipeSave" />

    </LinearLayout>

</LinearLayout>